<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CompressFragment">

    <TextView
        android:id="@+id/tv_file"
        style="@style/Widget.Custom.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_dimen"
        android:layout_marginTop="@dimen/default_dimen"
        android:text="@string/file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_filePath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_file"
        app:layout_constraintStart_toEndOf="@+id/tv_file"
        app:layout_constraintTop_toTopOf="@+id/tv_file"
        tools:text="File Path" />

    <Button
        android:id="@+id/btn_select_file"
        style="@style/Widget.Custom.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_dimen"
        android:text="@string/select_file"
        app:layout_constraintBottom_toBottomOf="@+id/tv_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_file" />

    <Button
        android:id="@+id/btn_compress"
        style="@style/Widget.Custom.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/compress_file"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_file" />

    <TextView
        android:id="@+id/tv_status_title"
        style="@style/Widget.Custom.Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_dimen"
        android:layout_marginStart="@dimen/default_dimen"
        android:text="@string/process_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_compress" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_title"
        tools:text="Status" />

</androidx.constraintlayout.widget.ConstraintLayout>